tests/errors/sem_call22.java
public class sem_call22 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , true , 7);
}
}